--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
                 </div>
                 <div class="form-field">
                     <label for="comment" class="form-label">Комментарий</label>
-                    <textarea name="comment" maxlength="250" placeholder="Введите текст"  cols="30"
-              rows="5" id="comment"></textarea>
+                    <textarea name="comment" maxlength="250" placeholder="Введите текст"  
+               id="comment"></textarea>
                 </div>
                 
                 <label class="checkbox-label">
