--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
     <main>
         <h1 class="visually-hidden">Наши проекты</h1>
         <!--Кнопки фильтра-->
-        <section >
+        <section class="section" >
             <div class="container">  
                 <ul class="filter">
                     <li class="filter-item"><button type="button" class="button secondary">Все</button></li>
