--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <main>
     <!--Герой-->
     
-    <section class="main-section">
-        <div class="hero container">
+    <section class="hero hero--color">
+        <div class="container">
             <h1>Эффективные решения <br> для вашего бизнеса</h1>
             <button type="button" class="button primary" data-modal-open>Заказать услугу</button>
         </div>
